[workspace]
members = [
    "crates/openvst3-abi",
    "crates/openvst3-host",
    "examples/host-cli",
    "examples/realtime-host-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["OpenVST3 contributors"]

[workspace.dependencies]
thiserror = "1.0"
libloading = "0.8"
bitflags = "2.6"
uuid = { version = "1.10", features = ["v4"] }
