[package]
name = "openvst3-host"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Header-free Rust host utilities for VST3: load module, get factory, enumerate classes"

[lib]
name = "openvst3_host"
path = "src/lib.rs"

[dependencies]
libloading = { workspace = true }
thiserror = { workspace = true }
openvst3-abi = { path = "../openvst3-abi" }
