[package]
name = "host-cli"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
openvst3-host = { path = "../../crates/openvst3-host" }

[package.metadata]
description = "Tiny header-free VST3 host: loads inner binary and prints class count"
